# lpil-magic-runner

./: Readme.md  pyproject.toml
lpilMagicRunner/: cli.py  lpilMagicRunner
scripts/: installEditableLpilMagicRunnerCommand
