[project]
name = "lpil-magic-runner"
version = "0.0.1"
description = "A tool to typeset LPiL documents using TeX-Magic-Comments."
authors = [
    {name = "Stephen Gaito", email = "stephen@perceptisys.co.uk"},
]
dependencies = [
    "pyyaml>=6.0",
]
requires-python = ">=3.10"
license = {text = "Apache2.0"}

[project.scripts]
lpilMagicRunner = "lpilMagicRunner.cli:cli"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

